cmake_minimum_required(VERSION 3.26)
project(LearnC C)

set(CMAKE_C_STANDARD 11)

add_library(LearnC library.c
        Lesson1/bt1.c
        Lesson1/bt2.c
        Lesson1/bt5.c
        Lesson2/bt1.c
        Lesson3/bt1.c
        Lesson3/bt3.c
        Lesson3/bt4.c
        Lesson3/bt5.c
        Lesson3/bt6.c
        Lesson4/bt1.c
        Lesson4/bt2.c
        Lesson4/bt3.c
        "bài làm trên lớp/nháp trên lớp.c"
        Lesson4/bt4.c
        Lesson4/bt5.c
        Lesson4/bt6.c
        Lesson4/bt7.c
        Lesson5/bt1.c
        "bài làm trên lớp/1.c"
        Lesson5/bt2.c
        "bài làm trên lớp/2.c"
        "bài làm trên lớp/3.c"
        "bài làm trên lớp/4.c"
        Lesson6/bt1.c
        Lesson5/bt3.c
        "bài làm trên lớp/5.c"
        Lesson5/bt4.c
        Lesson5/bt5.c
        "bài làm trên lớp/hàm.c"
        "bài làm trên lớp/tamgiacvuong.c"
        "bài làm trên lớp/hinhbinhhanh.c"
        "bài làm trên lớp/hinhthoi.c"
        "bài làm trên lớp/donghocat.c"
        Lesson8/bt1.c
        "bài làm trên lớp/mangdachieu.c"
        Lesson7/bt1.c
        Lesson7/bt2.c
        "bài làm trên lớp/mang1chieu.c"
        Lesson7/bt3.c
        Lesson8/bt2.c
        "bài làm trên lớp/saochepmang.c"
        Lesson8/bt5.c
        "bài làm trên lớp/contro.c"
        "bài làm trên lớp/ham.c"
        Lesson9/bt1.c
        Lesson9/bt2.c
)

