cmake_minimum_required(VERSION 3.26)
project(LearnC C)

set(CMAKE_C_STANDARD 11)

add_library(LearnC library.c
        Lesson1/bt1.c
        Lesson1/bt2.c
        Lesson1/bt5.c
        Lesson2/bt1.c
        Lesson3/bt1.c
        Lesson3/bt3.c
        Lesson3/bt4.c
        Lesson3/bt5.c
        Lesson3/bt6.c
        Lesson4/bt1.c
        Lesson4/bt2.c
        Lesson4/bt3.c
        "bài làm trên lớp/nháp trên lớp.c"
        Lesson4/bt4.c
        Lesson4/bt5.c
        Lesson4/bt6.c
        Lesson4/bt7.c
        Lesson5/bt1.c
        Lesson5/bt2.c
        Lesson6/bt1.c
        Lesson5/bt3.c
        Lesson5/bt4.c
        Lesson5/bt5.c
        "bài làm trên lớp/tamgiacvuong.c"
        "bài làm trên lớp/hinhbinhhanh.c"
        "bài làm trên lớp/hinhthoi.c"
        "bài làm trên lớp/donghocat.c"
        Lesson8/bt1.c
        "bài làm trên lớp/mangdachieu.c"
        Lesson7/bt1.c
        Lesson7/bt2.c
        "bài làm trên lớp/mang1chieu.c"
        Lesson7/bt3.c
        Lesson8/bt2.c
        "bài làm trên lớp/saochepmang.c"
        Lesson8/bt5.c
        "bài làm trên lớp/contro.c"
        "bài làm trên lớp/ham.c"
        Lesson9/bt1.c
        Lesson9/bt2.c
        "bài làm trên lớp/gets_and_puts.c"
        "bài làm trên lớp/qsort.c"
        "bài làm trên lớp/dequy.c"
        Lesson12/bt1.c
        Lesson12/bt2.c
        "bài làm trên lớp/thamchieu.c"
        "bài làm trên lớp/nhap1.c"
        Lesson10/bt1.c
        "bài làm trên lớp/sapxeptangdan.c"
        "bài làm trên lớp/locate.c"
        Lesson10/bt2.c
        "bài làm trên lớp/sochinhphuong.c"
        "bài làm trên lớp/soNguyenTo.c"
        Lesson10/bt3.c
        Lesson14/bt1.c
        Lesson14/bt2.c
        PTIT_KS2023A_[HuynhTamAnh]/hackathon.c
        "bài làm trên lớp/contro_capphatdong.c"
        Lesson11/bt1.c
        Lesson11/bt2.c
        Lesson11/bt3.c
        "bài làm trên lớp/chuoi.c"
        Lesson13/bt1.c
        Lesson13/bt2.c
        Lesson13/bt3.c
        Lesson14/bt3.c
        Lesson14/bt5.c
        "bài làm trên lớp/contromang.c"
        "bài làm trên lớp/mang2chieudangcontromang1chieu.c"
        "bài làm trên lớp/timkiemtt-timkiemnhiphan.c"
        "bài làm trên lớp/tranngu.c"
        "bài làm trên lớp/struct.c"
        Lesson15/bt1.c
        Lesson15/bt2.c
        "bài làm trên lớp/struct1.c"
        Lesson15/bt4.c
        Lesson23/bt1.c
        "học thêm với mn/struct.c"
        PTIT_KS2023A_[HuynhTamAnh]/hackathon2.c
)

